--- a/trunk/Nhom_21/My Laptop Store/QLKS/APPLICATION.csproj
+++ b/trunk/Nhom_21/My Laptop Store/QLKS/APPLICATION.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{8A7595B8-438E-435D-99E9-61504155E5CA}</ProjectGuid>
     <OutputType>WinExe</OutputType>
@@ -85,6 +85,8 @@
     <Compile Include="DANHMUCSANPHAM.Designer.cs">
       <DependentUpon>DANHMUCSANPHAM.cs</DependentUpon>
     </Compile>
+    <Compile Include="InterfaceKhachHang.cs" />
+    <Compile Include="TestNunit\TestInterfaceKhachHang.cs" />
     <Compile Include="THONGTINNHOM.cs">
       <SubType>Form</SubType>
     </Compile>
