--- a/trunk/Nhom_29/SourceCUAHANGLAPTOP/QLKS/APPLICATION.csproj
+++ b/trunk/Nhom_29/SourceCUAHANGLAPTOP/QLKS/APPLICATION.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{8A7595B8-438E-435D-99E9-61504155E5CA}</ProjectGuid>
     <OutputType>WinExe</OutputType>
@@ -71,26 +71,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DANHMUCSANPHAM.cs">
+    <Compile Include="ABOUT.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DANHMUCSANPHAM.Designer.cs">
-      <DependentUpon>DANHMUCSANPHAM.cs</DependentUpon>
+    <Compile Include="ABOUT.Designer.cs">
+      <DependentUpon>ABOUT.cs</DependentUpon>
     </Compile>
-    <Compile Include="THEMKHACHHANG.cs">
+    <Compile Include="SANPHAMTUVAN.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="THEMKHACHHANG.Designer.cs">
-      <DependentUpon>THEMKHACHHANG.cs</DependentUpon>
+    <Compile Include="SANPHAMTUVAN.Designer.cs">
+      <DependentUpon>SANPHAMTUVAN.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="DANHMUCSANPHAM.resx">
-      <DependentUpon>DANHMUCSANPHAM.cs</DependentUpon>
+    <EmbeddedResource Include="ABOUT.resx">
+      <DependentUpon>ABOUT.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="THEMKHACHHANG.resx">
-      <DependentUpon>THEMKHACHHANG.cs</DependentUpon>
+    <EmbeddedResource Include="SANPHAMTUVAN.resx">
+      <DependentUpon>SANPHAMTUVAN.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
