--- a/trunk/Nhom_21/My Laptop Store/EStoreDAO/app.config
+++ b/trunk/Nhom_21/My Laptop Store/EStoreDAO/app.config
@@ -21,5 +21,8 @@
         <add name="EStoreDAO.Properties.Settings.ESTOREConnectionString5"
             connectionString="Data Source=MRKEN-PC\SQL2005EXPRESS;Initial Catalog=ESTORE;User ID=sa"
             providerName="System.Data.SqlClient" />
+      <add name="EStoreDAO.Properties.Settings.ESTOREConnectionString5"
+           connectionString="Data Source=VIETDUY-PC\SQL2005EXPRESS;Initial Catalog=ESTORE;User ID=sa"
+           providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
