--- a/trunk/Code/GiaoDienWinForm/TUVANLAPTOP/EStoreDAO/EStoreDAO.csproj
+++ b/trunk/Code/GiaoDienWinForm/TUVANLAPTOP/EStoreDAO/EStoreDAO.csproj
@@ -48,6 +48,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataClasses1.cs">
+      <DependentUpon>DataClasses1.dbml</DependentUpon>
+    </Compile>
     <Compile Include="DataClasses1.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
