--- a/trunk/Code/GiaoDienWinForm/TUVANLAPTOP/TUVANLAPTOP/TUVANLAPTOP.csproj
+++ b/trunk/Code/GiaoDienWinForm/TUVANLAPTOP/TUVANLAPTOP/TUVANLAPTOP.csproj
@@ -191,6 +191,20 @@
   <ItemGroup>
     <None Include="Resources\HelpContent.png" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\EStoreBUS\EStoreBUS.csproj">
+      <Project>{8B6BFF8E-0410-4FF2-A891-838FFFB3B14C}</Project>
+      <Name>EStoreBUS</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\EStoreDAO\EStoreDAO.csproj">
+      <Project>{37E6FD17-D704-448D-9376-57BC1F7F1E43}</Project>
+      <Name>EStoreDAO</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\EStoreDTO\EStoreDTO.csproj">
+      <Project>{1D59FB1C-8ADA-4678-A8CD-12ECC1492E83}</Project>
+      <Name>EStoreDTO</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
