--- a/Code/GiaoDienWinForm/TUVANLAPTOP/TUVANLAPTOP/TUVANLAPTOP.csproj
+++ b/Code/GiaoDienWinForm/TUVANLAPTOP/TUVANLAPTOP/TUVANLAPTOP.csproj
@@ -122,6 +122,7 @@
     </Compile>
     <EmbeddedResource Include="UC_SanPham.resx">
       <DependentUpon>UC_SanPham.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
