--- a/trunk/Code/TUVANLAPTOP_DANGNHAP_XOASP_TRACUU_TIMSANPHAMMOINHAT/TUVANLAPTOP_DANGNHAP_XOASP/TUVANLAPTOP_DANGNHAP_XOASP_TRACUUSP/EStoreDAO/EStoreDAO.csproj
+++ b/trunk/Code/TUVANLAPTOP_DANGNHAP_XOASP_TRACUU_TIMSANPHAMMOINHAT/TUVANLAPTOP_DANGNHAP_XOASP/TUVANLAPTOP_DANGNHAP_XOASP_TRACUUSP/EStoreDAO/EStoreDAO.csproj
@@ -41,6 +41,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -49,6 +50,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -141,6 +143,11 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1 Client Profile</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
     <BootstrapperPackage Include="Microsoft.Net.Framework.2.0">
       <Visible>False</Visible>
       <ProductName>.NET Framework 2.0 %28x86%29</ProductName>
