--- a/Code/TUVANLAPTOP/TUVANLAPTOP/TUVANLAPTOP.csproj
+++ b/Code/TUVANLAPTOP/TUVANLAPTOP/TUVANLAPTOP.csproj
@@ -74,6 +74,12 @@
     <Compile Include="ABOUT.Designer.cs">
       <DependentUpon>ABOUT.cs</DependentUpon>
     </Compile>
+    <Compile Include="CAPNHATDULIEUKHACHHANG.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CAPNHATDULIEUKHACHHANG.Designer.cs">
+      <DependentUpon>CAPNHATDULIEUKHACHHANG.cs</DependentUpon>
+    </Compile>
     <Compile Include="CAPNHATXOASANPHAM.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -126,6 +132,10 @@
     </Compile>
     <EmbeddedResource Include="ABOUT.resx">
       <DependentUpon>ABOUT.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CAPNHATDULIEUKHACHHANG.resx">
+      <DependentUpon>CAPNHATDULIEUKHACHHANG.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="CAPNHATXOASANPHAM.resx">
