--- a/Code/TUVANLAPTOP/EStoreTest/EStoreTest.csproj
+++ b/Code/TUVANLAPTOP/EStoreTest/EStoreTest.csproj
@@ -56,7 +56,21 @@
     <Compile Include="myTestChiTietCongNgheRamDAO.cs" />
     <Compile Include="myTestChiTietDongCardDoHoaDAO.cs" />
     <Compile Include="myTestChiTietDongCardMangDAO.cs" />
+    <Compile Include="myTestChiTietDongCardReaderDAO.cs" />
     <Compile Include="myTestChiTietDongCPUDAO.cs" />
+    <Compile Include="myTestChiTietDongLaptopDAO.cs" />
+    <Compile Include="myTestChiTietDongLoaDAO.cs" />
+    <Compile Include="myTestChiTietDongManHinhDAO.cs" />
+    <Compile Include="myTestChiTietDongOCungDAO.cs" />
+    <Compile Include="myTestChiTietDongODiaQuangDAO.cs" />
+    <Compile Include="myTestChiTietDongPinDAO.cs" />
+    <Compile Include="myTestChiTietDongRamDAO.cs" />
+    <Compile Include="myTestChiTietDongWebcamDAO.cs" />
+    <Compile Include="myTestChiTietDungLuongOCungDAO.cs" />
+    <Compile Include="myTestChiTietHeDieuHanhDAO.cs" />
+    <Compile Include="myTestChiTietKichThuocManHinhDAO.cs" />
+    <Compile Include="myTestChiTietVongQuayOCungDAO.cs" />
+    <Compile Include="myTestDanhGiaDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
