--- a/trunk/Code/TUVANLAPTOP/EStoreTestTUVANLAPTOP/EStoreTestTUVANLAPTOP.csproj
+++ b/trunk/Code/TUVANLAPTOP/EStoreTestTUVANLAPTOP/EStoreTestTUVANLAPTOP.csproj
@@ -31,10 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=2.5.10.11092, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Users\Trung Luan\Desktop\NUnit-2.5.10.11092\bin\net-2.0\nunit.framework.dll</HintPath>
-    </Reference>
+    <Reference Include="nunit.framework, Version=2.5.10.11092, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
